2009-04-09  higepon  <higepon@users.sourceforge.jp>

        * FileBinaryInputPort.cpp : Changed fd_ => File Class.

        * LineBufferedFileBinaryInputOutputPort.h: Changed fd_ => File Class.

        * BufferedFileBinaryInputPort.cpp : Changed fd_ => File Class.

        * FileBinaryInputOutputPort.cpp: Changed OutputPort to use File Class.

        * OSCompat.cpp (lseekFd): Added.

        * main.cpp (main): Use getCommandLine and getopt_longU.

        * configure.ac: autoreconf -ifv for mingw.

2009-04-08  higepon  <higepon@users.sourceforge.jp>

        * getoptU.cpp : Ported getopt_long for ucs4.

        * getoptUTest.cpp: Added tests for getopt_longU.

        * OSCompat.cpp (getMoshExecutablePath): Moved to OSCompat.cpp

2009-04-07  higepon  <higepon@users.sourceforge.jp>

        * Changed open() => openFd();

        * Added openFd.

        * Added utf32toUtf8 and utf8ToUtf32.

        * OSCompat.cpp (getEnv, getEnvAlist): Added for Linux and OS X.

        * OSCompatTest.cpp : Added.

        * OScompat.h : Added.

2009-04-06  higepon  <higepon@users.sourceforge.jp>

        * Bignum.h: FreeBSD has no __WORDSIZE ?.

        * (mosh-executable-path) works on FreeBSD.

        * (mosh-executable-path) works on OSX using _NSGetExecutablePath.

2009-04-05  higepon  <higepon@users.sourceforge.jp>

        * Changed standerd library look up path. Search the (mosh-executable-path)/lib which is the path of mosh binary.

        * UtilityProcedures.cpp : Added mosh-executable-path. Checked only on Linux.

        * tools/psyntax-r6rs/rev10_to_10/print-prefix.ss : Added.

2009-04-04  higepon  <higepon@users.sourceforge.jp>

        * Fixed VM.cpp:310: warning: 'ret.scheme::Object::val' may be used uninitialized in this function.

        * gc-7.1 : Disabled Threads. On Ubuntu 8.10 amd64 with DLINUX_THREADS=1,s gctest crash.

2009-04-03  higepon  <higepon@users.sourceforge.jp>

        * README-WINDOWS.txt: Added.
